+ Update React and all react related packages (and pre-compiled js files) to the latest versions + Make footer stick at the bottom and the "main" fill the space between the header and footer + Make the games list in BrowsePage use "React Virtualized" to not render off-screen game elements (boost performance by alot! - with some subtle load-in time when scrolling too fast)

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
     <script src="./js/react-router-dom.js"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="root" id="root"></div>
     <script src="./main.bundle.js"></script>
   </body>
 </html>
