+ Thumbnail component stores "isImageLoaded" in its state instead of as a property + "react-virtualized" is loaded from a pre-packaged .js file instead of being packaged each build (saves time and ~100kb if i remember correctly) + Refactor game list into its own component (instead of being part of BrowsePage) + Add function to get the filename of a LaunchBox Game Image (might not cover all possible names, but i think it works with all the ones ive tested thus far) + Pimp the layout of <GameList>, <Header> and some other stuff + Make the backgrounds of all elements dark (so that some aren't blindingly bright)

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,7 @@
     <script src="./js/react-dom.development.js"></script>
     <script src="./js/react-router.js"></script>
     <script src="./js/react-router-dom.js"></script>
+    <script src="./js/react-virtualized.js"></script>
   </head>
   <body>
     <div class="root" id="root"></div>
