+ Add AppConstants, a ts file that will contain static data that is accessible from anywhere (like the title of the app, or what version it is) + Make everything that shows the title, subtitle and version of the app get it from AppConstants + Make the browser redirect to the browse page when a search is made (from anywhere) + Add a note on the "games not found" message that tells the user that they have to reload the application for the config file to be read again + Add tutorial on the home page (so that new users know what to do) + Remove default tags from search bar (i left some debug tags there for a long time oopsie)

--- a/static/renderer/index.html
+++ b/static/renderer/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html">
     <!-- Cool stuff -->
-    <title>Library Thingie</title>
+    <title> </title>
     <!-- Styles -->
     <link href="./styles/styles.css" type="text/css" rel="stylesheet">
     <!-- Imports -->
