refactor: split "styles.css" into "core.css" and "fancy.css"
Split the CSS file into two files.
"Core" is supposed to contain the rules that sets the position and size of
all elements.
"Fancy" is supposed to contain rules that enhances the visuals (colors,
box shadows, theme variables).

--- a/static/window/index.html
+++ b/static/window/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html">
     <!-- Styles -->
-    <link href="./styles/styles.css" type="text/css" rel="stylesheet">
+    <link href="./styles/core.css" type="text/css" rel="stylesheet">
+    <link href="./styles/fancy.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="root" id="root"></div>
