feat: Browser Mode (replaces Flash mode)

--- a/static/window/flash_index.html
+++ b/static/window/flash_index.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+  <meta charset="UTF-8">
   <head>
+    <script>
+      function createParam(name, value) {
+        const param = document.createElement('param');
+        param.setAttribute('name', name);
+        param.setAttribute('value', value);
+        return param;
+      }
+      function fillGame() {
+        const urlParams = new URLSearchParams(window.location.search);
+        const data = urlParams.get('data');
+        const game = document.createElement('object');
+        game.setAttribute('data', data);
+        game.setAttribute('type', 'application/x-shockwave-flash');
+        game.appendChild(createParam('wmode', 'direct'));
+        game.appendChild(createParam('allowscriptaccess', 'always'));
+        game.appendChild(createParam('allowfullscreen', 'true'));
+        game.appendChild(createParam('allowfullscreeninteractive', 'true'));
+        game.appendChild(createParam('allownetworkingmode', 'all'));
+        document.body.appendChild(game);
+      }
+      if (document.readyState != 'loading') {
+        fillGame();
+      } else {
+        document.addEventListener("DOMContentLoaded", fillGame)
+      }
+    </script>
     <style>
       * {
         margin: 0;
