feat: GOTD Datepicker

--- a/static/window/index.html
+++ b/static/window/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html">
     <!-- Styles -->
+    <link href="./styles/react-datepicker.css" type="text/css" rel="stylesheet">
     <link href="./styles/core.css" type="text/css" rel="stylesheet">
     <link href="./styles/fancy.css" type="text/css" rel="stylesheet">
   </head>
